syntax = "proto3";

package proto;

option go_package = "github.com/damirkairlbay/task-manager/pkg/proto";

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (TaskResponse);
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
  rpc GetTask (GetTaskRequest) returns (TaskResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (TaskResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
}

message Task {
  int64 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  bool completed = 3;
}

message UpdateTaskRequest {
  int64 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}

message TaskResponse {
  Task task = 1;
}

message GetTaskRequest {
  int64 id = 1;
}

message ListTasksRequest {

}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message DeleteTaskRequest {
  int64 id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
}